<?xml version="1.0"?>
<package format="3">
  <name>fv_audio_output</name>
  <version>0.1.0</version>
  <description>Audio playback node for FluentVision, consuming fv_audio/msg/AudioFrame and writing to ALSA devices.</description>
  <maintainer email="maintainer@example.com">Fluent Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>fv_audio</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>fv_audio</exec_depend>

  <depend>pkg-config</depend>
  <depend>libasound2-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
