<?xml version="1.0"?>
<package format="3">
  <name>fa_aec_nn</name>
  <version>0.1.0</version>
  <description>NN-based residual echo suppression node for FluentAudio (C++), designed for offline ONNX inference (currently passthrough scaffold).</description>
  <maintainer email="maintainer@example.com">FluentAudio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>fa_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

